# BiCleaner

./: .gitignore  .gitmodules  LICENSE  README.md  settings.gradle 2.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/cat/app/bicleaner/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: xposed_init
app/src/main/java/cat/app/bicleaner/: MainActivity.kt  XposedInit.kt
app/src/main/java/cat/app/bicleaner/constant/: BiCleanerConstants.kt
app/src/main/java/cat/app/bicleaner/data/: BilibiliDetail.kt  ModuleDetail.kt  PreferencesData.kt  PreferencesDetail.kt
app/src/main/java/cat/app/bicleaner/hook/: BaseHooker.kt  BilibiliGlobalHooker.kt  BilibiliHooker.kt  HookHandler.kt  MainHook.kt  ModuleUtilsHooker.kt  SettingHooker.kt
app/src/main/java/cat/app/bicleaner/property/: Bilibili.kt  Constant.kt
app/src/main/java/cat/app/bicleaner/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/cat/app/bicleaner/ui/: BiCleanerApp.kt  BiCleanerCard.kt  BiCleanerDialog.kt  BiCleanerViewModel.kt  HomeContent.kt  LoggingContent.kt  Preferences.kt  SettingContent.kt
app/src/main/java/cat/app/bicleaner/util/: FileHelper.kt  LogUtils.kt  ModuleUtils.kt  PackageUtils.kt  SharedPreferencesDelegate.kt  (+1 more)
app/src/main/jni/: CMakeLists.txt  bicleaner.cc
app/src/main/res/values/: arrays.xml  colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: data_extraction_rules.xml
app/src/test/java/cat/app/bicleaner/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+14 files in other folders)
